resolved merge conflicts